# vertai

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  FUNCTION_DEPENDENCIES.md  MIGRATION.md  ROADMAP.md
docs/api/: index.html  search.js  vertai.html
docs/reviews/: S01-review.md  S02-review.md  S03-review.md  S04-review.md  S05-review.md  S06-review.md  S07-review.md  S08-review.md  S09-review.md  S10-review.md  S11-review.md  S12-review.md
docs/superpowers/specs/: 2026-06-06-ai-agent-sdk-design.md
examples/: agent_demo.py  knowledge_qa_demo.py  quick_start_knowledge_base.py
sample_docs/: machine_learning.txt  python.txt
tests/: __init__.py  _helpers.py  conftest.py  test_agent.py  test_callbacks.py  test_dashboard.py  test_deepseek_integration.py  test_docgen.py  test_embedding.py  test_knowledge_qa.py  test_llm.py  test_local_models.py  test_memory.py  test_parser.py  test_provider.py  test_retriever.py  test_reviewer.py  test_structured.py  test_text_splitter.py  test_tool.py  test_vector.py  test_workflow.py
tests/benchmarks/: test_benchmarks.py
vertai/: __init__.py
vertai/core/: __init__.py  agent.py  callbacks.py  embedding.py  llm.py  memory.py  provider.py  retriever.py  text_splitter.py  tool.py  vector.py
vertai/core/tools/: __init__.py  calculator.py  file.py  http.py  web_search.py
vertai/data/: __init__.py  parser.py
vertai/local/: __init__.py  models.py
vertai/output/: __init__.py  docgen.py  structured.py
vertai/scenarios/: __init__.py  knowledge_qa.py  reviewer.py
vertai/viz/: __init__.py  dashboard.py
vertai/workflow/: __init__.py  workflow.py
