[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vertai"
version = "0.1.3"
description = "VertAI - A vertical-domain AI agent development SDK with local-first design"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "VertAI Team", email = "1281676337@qq.com" }
]
keywords = ["ai", "sdk", "agent", "local-first", "offline", "vector-search", "semantic-search", "llm", "rag", "workflow", "knowledge-base", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
# 开发依赖 | Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
# 文档解析扩展 | Document parsing extension
doc-parser = [
    "PyMuPDF>=1.23.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.21",
]
# 推荐：启用真正的语义搜索能力 | Recommended: Enable real semantic search capabilities
embeddings = [
    "sentence-transformers>=2.0.0",
]
# 生产环境完整安装 | Complete production installation
production = [
    "vertai[embeddings,doc-parser]",
    "chromadb>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/EnjouZeratul/vertai"
Documentation = "https://github.com/EnjouZeratul/vertai#readme"
Repository = "https://github.com/EnjouZeratul/vertai"
Issues = "https://github.com/EnjouZeratul/vertai/issues"

[tool.hatch.build.targets.wheel]
packages = ["vertai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py310"