[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vertai"
dynamic = ["version"]
description = "VertAI - A local-first lightweight AI agent SDK for vertical-domain rapid development"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "VertAI Team", email = "1281676337@qq.com" }
]
keywords = ["ai", "sdk", "agent", "local-first", "offline", "vector-search", "semantic-search", "llm", "rag", "workflow", "knowledge-base", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
# 开发依赖 | Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "pdoc>=14.0.0",
]
# 文档解析扩展 | Document parsing extension
doc-parser = [
    "PyMuPDF>=1.23.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.21",
]
# 推荐：启用真正的语义搜索能力 | Recommended: Enable real semantic search capabilities
embeddings = [
    "sentence-transformers>=2.0.0",
]
# 可视化扩展（已从核心移出）| Visualization extras (moved out of core)
# Dashboard 本身无第三方运行时依赖（纯标准库 HTML/JS 生成）。此 extras
# 作为显式安装分组保留，便于将来添加图表渲染依赖。 | Dashboard has no
# third-party runtime deps (pure-stdlib HTML/JS generation). This extras group
# is kept as an explicit install path for future chart-rendering deps.
viz = []
# 生产环境完整安装 | Complete production installation
production = [
    "vertai[embeddings,doc-parser]",
    "chromadb>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/EnjouZeratul/vertai"
Documentation = "https://github.com/EnjouZeratul/vertai#readme"
Repository = "https://github.com/EnjouZeratul/vertai"
Issues = "https://github.com/EnjouZeratul/vertai/issues"

[tool.hatch.version]
path = "vertai/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["vertai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

# Optional extras ship without type stubs; suppress missing-import reports for
# them so `mypy --strict` stays clean on the core code that imports them under
# try/except guards. This does not weaken typing of the core code itself.
[[tool.mypy.overrides]]
module = [
    "chromadb",
    "faiss",
    "sentence_transformers",
    "numpy",
    "whisper",
    "torch",
    "psutil",
    "fitz",
    "docx",
    "docx.table",
    "openpyxl",
    "openpyxl.worksheet.worksheet",
    "pptx",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"